# videos

./: .gitignore  .gitpod.yml  Cargo.toml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: advisiores.yml  build.yml  clippy.yml
pythonprojects/: intro.py
src/: main.rs
src/modules/: performance.rs
video/: intro.py  introrust.py  library.py  video1.py
