[package]
name = "rust-template"
version = "0.1.0"
description = "yeah."
repository = "https://github.com/misilelab/rust-template"
documentation = "https://docs.rs/rust-template"
authors = ["MisileLaboratory"]
readme = "README.md"
license-file = "LICENSE.md"
edition = "2021"

[dependencies]
bevy = { version = "0.7", features = ["dynamic"] }